installation de EasyAdmin et custom

--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -1,1 +1,3 @@
-<p>Educ Pluto 2022 - <a href="#">Mentions Légales</a></p>
+<footer>
+    <p>Educ Pluto 2022 - <a href="#">Mentions Légales</a></p>
+</footer>
