--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -1,9 +1,20 @@
 <header>
-    <nav>
-        <a href="#">Accueil</a>
-        <a href="#">Service</a>
-        <a href="#">Galerie</a>
-        <a href="#">Contact</a>
-        <a href="#">Connexion</a>
-    </nav>
+	<div class="bando">
+		<p>Me contacter  par téléphone au 06 04 41 44 14 ou par e-mail à contact@educpluto.com
+		</p>
+	</div>
+	<div class="nav-blur">
+		<nav>
+			<div class="logo-header">
+				<img src=" {{ asset('/img/logo.jpeg') }}" alt="logo du site">
+			</div>
+			<a href="#">Accueil</a>
+			<a href="#">Prestation</a>
+			<a href="#">Galerie</a>
+			<a href="#">Blog</a>
+			<a href="#">Contactez-nous</a>
+		</nav>
+	</div>
+
 </header>
+<div class="banner-header"></div>
