--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AppController!{% endblock %}
+{% block title %} Accueil {{parent()}}{% endblock %}
 
 {% block body %}
     <h1>Bienvue chez Educ Pluto !</h1>
