--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Educ Pluto{% endblock %}</title>
+        <title>{% block title %}- Educ Pluto{% endblock %}</title>
+        <link href="{{ asset('build/app.css') }}" rel="stylesheet">
     </head>
     <body>
         {% include "_header.html.twig" %}
