avancé construction page index

--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -4,3 +4,7 @@ $font-text : 'Open Sans';
 $primary-color : #124b12;
 
 $nav-height : 1.5rem;
+
+$h1-desktop : 3.75rem;
+$h2-desktop : 3.125rem;
+$h3-desktop : 2.5rem;
