--- a/templates/_footer.html.twig
+++ b/templates/_footer.html.twig
@@ -1,3 +1,3 @@
 <footer>
-    <p>Educ Pluto 2022 - <a href="#">Mentions Légales</a></p>
+    <p>Educ Pluto © 2022 - <a href="#">Mentions Légales</a></p>
 </footer>
