--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -3,5 +3,53 @@
 {% block title %} Accueil {{parent()}}{% endblock %}
 
 {% block body %}
-    <h1>Bienvue chez Educ Pluto !</h1>
+    <main>
+        <div class="banner-header"></div>    
+        <section id="about-me">
+            <div class="top-index">
+                <h1>Bienvue chez <br><span class="font-green">Educ Pluto</span> !</h1>        
+            </div>
+            <div class="container-index">
+                <div class="content">
+                    <h3>Qui suis-je</h3> 
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt, deserunt nisi? Non distinctio recusandae voluptate quae hic doloribus perspiciatis pariatur nesciunt nobis earum numquam ducimus explicabo, neque sit, officiis dignissimos? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis eveniet facere iste ipsum blanditiis similique. Eveniet voluptatem quas, fugiat incidunt eos unde odio autem quos veritatis maxime fugit, a in!</p>           
+                </div>
+                <div class="img-content">
+                    <img src="{{ asset('/img/contact.jpg') }}" alt="image de la section qui suis-je">
+                </div>
+            </div>            
+        </section>
+        <section id="methodes">
+            <div class="methodes">
+                <h2>Ma méthode en <br><span class="font-green">3 points</span></h2>
+            </div>
+            <div class="container-index">
+                <div class="img-content">
+                    <img src="{{ asset('/img/chienNeige.jpg') }}" alt="image de la section qui suis-je">
+                </div>
+                <div class="content">
+                    <h3>Comprendre votre chien</h3> 
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt, deserunt nisi? Non distinctio recusandae voluptate quae hic doloribus perspiciatis pariatur nesciunt nobis earum numquam ducimus explicabo, neque sit, officiis dignissimos? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis eveniet facere iste ipsum blanditiis similique. Eveniet voluptatem quas, fugiat incidunt eos unde odio autem quos veritatis maxime fugit, a in!</p>           
+                </div>
+            </div>        
+            <div class="container-index">
+                <div class="content">
+                    <h3>Être à votre écoute</h3> 
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt, deserunt nisi? Non distinctio recusandae voluptate quae hic doloribus perspiciatis pariatur nesciunt nobis earum numquam ducimus explicabo, neque sit, officiis dignissimos? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis eveniet facere iste ipsum blanditiis similique. Eveniet voluptatem quas, fugiat incidunt eos unde odio autem quos veritatis maxime fugit, a in!</p>           
+                </div>
+                <div class="img-content">
+                    <img src="{{ asset('/img/aLecoute.jpg') }}" alt="image de la section qui suis-je">
+                </div>
+            </div>        
+            <div class="container-index">
+                <div class="img-content">
+                    <img src="{{ asset('/img/chienLaisse.jpg') }}" alt="image de la section qui suis-je">
+                </div>
+                <div class="content">
+                    <h3>Analize personnalisée</h3> 
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt, deserunt nisi? Non distinctio recusandae voluptate quae hic doloribus perspiciatis pariatur nesciunt nobis earum numquam ducimus explicabo, neque sit, officiis dignissimos? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis eveniet facere iste ipsum blanditiis similique. Eveniet voluptatem quas, fugiat incidunt eos unde odio autem quos veritatis maxime fugit, a in!</p>           
+                </div>
+            </div>        
+        </section>
+    </main>
 {% endblock %}
