securisation espace admin

--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -1,8 +1,8 @@
 <header>
-	<div class="bando">
+	{# <div class="bando">
 		<p>Me contacter  par téléphone au 06 04 41 44 14 ou par e-mail à contact@educpluto.com
 		</p>
-	</div>
+	</div> #}
 	<div class="nav-blur">
 		<nav>
 			<div class="logo-header">
