--- a/templates/app/blog.html.twig
+++ b/templates/app/blog.html.twig
@@ -1,9 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Blog {{parent()}}{% endblock %}
+{% block title %}
+	Blog
+	{{parent()}}
+{% endblock %}
 
 {% block body %}
-    <main>
-        <h1>Blog</h1>
-    </main>
+	<main>
+		<div class="banner">
+			<h1>Blog</h1>
+		</div>
+	</main>
 {% endblock %}
