crud prestation et affichage sur la page

--- a/assets/sass/theme/_index.scss
+++ b/assets/sass/theme/_index.scss
@@ -14,7 +14,7 @@
 
 .container-index{
     display: flex;
-    margin: 2rem auto;
+    margin: 3rem auto;
     max-width: 1280px;
    
     .content {
@@ -33,7 +33,8 @@
         }
     } 
     .img-content {
-        height: 400px;
+        width: 50%;
+
 
         img {
             height: 100%;
