--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,18 +5,18 @@
 
 {% block body %}
 	<div class="banner">
-		<h1>Prestation</h1>
+		<h1>Espace Administrateur</h1>
 	</div>
-	<form method="post">
+	<form method="post" class="form">
 		{% if error %}
 			<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 		{% endif %}
 
 		{% if app.user %}
 			<div class="mb-3">
-				You are logged in as
+				vous êtes connecté en tant que
 				{{ app.user.username }},
-				<a href="{{ path('app_logout') }}">Logout</a>
+				<a href="{{ path('app_logout') }}">Se déconnecter</a>
 			</div>
 		{% endif %}
 
@@ -41,7 +41,7 @@
 		    #}
 
 		<button class="btn btn-lg btn-primary" type="submit">
-			Sign in
+			Se connecter
 		</button>
 	</form>
 {% endblock %}
