--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -2,6 +2,7 @@ $font-title : 'Quicksand';
 $font-text : 'Open Sans';
 
 $primary-color : #124b12;
+$btn-hover : #124b12b2;
 
 $nav-height : 1.5rem;
 
