--- a/templates/prestation/index.html.twig
+++ b/templates/prestation/index.html.twig
@@ -1,45 +1,25 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Prestation index{% endblock %}
+{% block title %}
+	Prestation
+	{{parent()}}
+{% endblock %}
 
 {% block body %}
-    <h1>Prestation index</h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Title</th>
-                <th>ResumeDesc</th>
-                <th>Description</th>
-                <th>CreatedAt</th>
-                <th>Price</th>
-                <th>Duration</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for prestation in prestations %}
-            <tr>
-                <td>{{ prestation.id }}</td>
-                <td>{{ prestation.title }}</td>
-                <td>{{ prestation.resumeDesc }}</td>
-                <td>{{ prestation.description }}</td>
-                <td>{{ prestation.createdAt ? prestation.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ prestation.price }}</td>
-                <td>{{ prestation.duration }}</td>
-                <td>
-                    <a href="{{ path('app_prestation_show', {'id': prestation.id}) }}">show</a>
-                    <a href="{{ path('app_prestation_edit', {'id': prestation.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="8">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_prestation_new') }}">Create new</a>
+	<main>
+		<div class="banner">
+			<h1>Prestation</h1>
+		</div>
+		<section id="prestation">
+			{% for prestation in prestations %}
+				<div class="card-prestation">
+					<div class="card-content">
+						<h3 class="title-prestation">{{ prestation.title }}</h3>
+						<p class="resume-prestation">{{ prestation.resume|raw }}</p>
+						<a class="btn-show" href="#">Voir détail</a>
+					</div>
+				</div>
+			{% endfor %}
+		</section>
+	</main>
 {% endblock %}
