--- a/assets/sass/theme/_prestation.scss
+++ b/assets/sass/theme/_prestation.scss
@@ -1,10 +1,64 @@
 #prestation {
-    margin: 3rem;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    
-    .card-prestation {
-        text-align: center;
-        width: 60%;
+  margin: 4rem 0;
+  display: flex;
+  flex-wrap: wrap;
+
+  h2 {
+    text-align: center;
+    margin: 0 auto 4rem;
+  }
+
+  .card-prestation {
+    position: relative;
+    text-align: center;
+    margin: 1rem 1rem 4rem;
+    padding: 0 !important;
+    height: 500px;
+    min-width: 350px;
+    border: 1px solid black;
+    border-radius: 14px;
+    box-shadow: black 2px 4px 5px;
+
+    .card-content {
+      width: 100%;
+      height: 100%;
+      padding: 1rem;
+
+      &:hover img {
+        transform: scale(1.1);
+      }
+
+      .img-prestation {
+        width: 200px;
+        height: 200px;
+        margin: 2rem auto;
+        border-radius: 200px;
+        border: 5px solid $primary-color;
+        overflow: hidden;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          transition: transform 0.7s;
+        }
+      }
+
+      a {
+        position: absolute;
+        bottom: 1rem;
+        left: 50%;
+        transform: translateX(-50%);
+
+        padding: 1rem 3rem;
+        border-radius: 14px;
+        background-color: $primary-color;
+        color: #fff;
+        text-decoration: none;
+        transition: background-color 0.3s;
+        &:hover {
+          background-color: $btn-hover;
+        }
+      }
     }
+  }
 }
