--- a/templates/prestation/index.html.twig
+++ b/templates/prestation/index.html.twig
@@ -11,15 +11,26 @@
 			<h1>Prestation</h1>
 		</div>
 		<section id="prestation">
-			{% for prestation in prestations %}
-				<div class="card-prestation">
-					<div class="card-content">
-						<h3 class="title-prestation">{{ prestation.title }}</h3>
-						<p class="resume-prestation">{{ prestation.resume|raw }}</p>
-						<a class="btn-show" href="#">Voir détail</a>
-					</div>
+			<h2>Découvrez les différentes
+				<br><span class="font-green">préstations proposées</span>
+			</h2>
+			<div class="container">
+				<div class="row justify-content-md-center justify-content-center">
+					{% for prestation in prestations %}
+						<div class="card-prestation col-lg-3 col-md-6 col-12">
+							<div class="card-content">
+								<div class="img-prestation">
+									<img src="{{ asset('/uploads/img/') }}{{prestation.image}}" alt="photo illustrant la prestation">
+								</div>
+								<h3 class="title-prestation">{{ prestation.title }}</h3>
+								<p class="resume-prestation">{{ prestation.resume|raw }}</p>
+								{# <a class="btn-show" href="#">Voir détail</a> #}
+                                <a href="#">Voir détail</a>
+							</div>
+						</div>
+					{% endfor %}
 				</div>
-			{% endfor %}
+			</div>
 		</section>
 	</main>
 {% endblock %}
