intégration de VichUploader et finalisation de la partie prestation

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -10,6 +10,7 @@
 @import "theme/footer";
 @import "theme/index";
 @import "theme/prestation";
+@import "theme/showPrestation";
 @import "theme/banner";
 @import "theme/login";
 
