--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -9,7 +9,7 @@
 				<img src=" {{ asset('/img/logo.jpeg') }}" alt="logo du site">
 			</div>
 			<a href="{{ path('app_index') }}">Accueil</a>
-			<a href="{{ path('app_prestation') }}">Prestation</a>
+			<a href="{{ path('prestation_index') }}">Prestation</a>
 			<a href="{{ path('app_blog') }}">Blog</a>
 			<a href="{{ path('app_rdv') }}">Prendre RDV</a>
 		</nav>
