--- a/assets/sass/theme/_banner.scss
+++ b/assets/sass/theme/_banner.scss
@@ -6,7 +6,18 @@
     h1 {
         text-align: center;
         padding-top: 13rem;
-        color: rgb(0, 0, 0);
+        color: rgb(255, 255, 255);
     }
 
+  }
+
+  .bannerPrestaShow {
+    background: no-repeat center/cover;
+    padding: 1rem 0 10rem;
+
+    h1 {
+      text-align: center;
+      padding-top: 13rem;
+      color: #fff;
+    }
   }
