--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -40,7 +40,7 @@
 		        </div>
 		    #}
 
-		<button class="btn btn-lg btn-primary" type="submit">
+		<button class="btn btn-lg btn-primary btn-perso" type="submit">
 			Se connecter
 		</button>
 	</form>
