--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -9,3 +9,9 @@ $nav-height : 1.5rem;
 $h1-desktop : 3.75rem;
 $h2-desktop : 3.125rem;
 $h3-desktop : 2.5rem;
+$h4-desktop : 1.5rem;
+
+$h1-mobile : 2.75rem;
+$h2-mobile : 2.5rem;
+$h3-mobile : 1.75rem;
+$h4-mobile : 1.5rem;
