--- a/templates/prestation/show.html.twig
+++ b/templates/prestation/show.html.twig
@@ -30,7 +30,7 @@
 						{{prestation.price | raw}}€</div>
 					<div class="price-showPrestation">La durée de la séance est de
 						{{prestation.duration | raw}}</div>
-					<a href="#" class="btn-rdv">Prendre RDV</a>
+					<a href="{{path('app_rdv')}}" class="btn-rdv">Prendre RDV</a>
 				</div>
 			</section>
 		</main>
