--- a/assets/sass/theme/_index.scss
+++ b/assets/sass/theme/_index.scss
@@ -14,8 +14,11 @@
 
 .container-index{
     display: flex;
+    justify-content: center;
     margin: 3rem auto;
     max-width: 1280px;
+
+
    
     .content {
         width: 50%;
@@ -25,15 +28,25 @@
 
         p {
             padding: 0 2rem;
+            @media screen and (max-width :888px) {
+                margin: 0 auto;
+                max-width: 600px;
+             }
         }
 
         h3 {
             color: $primary-color;
             text-align: center;
         }
+        @media screen and (max-width :888px) {
+            width: 100%;
+            max-width: 1280px;
+         }
+
     } 
     .img-content {
-        width: 50%;
+        width: 400px;
+        height: 300px;
 
 
         img {
@@ -41,6 +54,10 @@
             width: 100%;
             object-fit: cover;
             border-radius: 40px;
+        }
+
+        @media screen and (max-width :888px) {
+            display: none;
         }
     }
 }
@@ -54,6 +71,73 @@
             text-align: center;
         }
     }
+}
+
+#parallax {
+
+    margin: 3rem 0;
+
+    .para-banner {
+        background-image: url(../../../public/img/paralaxe.jpg);
+        height: 300px;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+    }
+    @media screen and (max-width :888px) {
+        display: none;
+     }
+}
+
+
+// SWIPPER
+
+#avis {
+    margin: 0 4rem 4rem;
+    h2 {
+        text-align: center;
+        margin-bottom: 4rem;
+    }
+
+    .avis-card {
+        .avis-content {
+            width: 80%;
+            height: 100%;
+        }
+
+    }
+    .swiper {
+        width: 100%;
+        height: 300px;
+
+      }
+
+      .swiper-slide {
+        text-align: center;
+        font-size: 18px;
+        background: #fff;
+
+        /* Center slide text vertically */
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        -webkit-justify-content: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
+        align-items: center;
+      }
+
+      .swiper-slide img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
 }
 
 
