--- a/assets/sass/theme/_prestation.scss
+++ b/assets/sass/theme/_prestation.scss
@@ -4,18 +4,23 @@
   h1 {
     text-align: center;
     padding-top: 13rem;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
   }
 }
 
 #prestation {
   margin: 4rem 0;
-  display: flex;
-  flex-wrap: wrap;
+
 
   h2 {
     text-align: center;
     margin: 0 auto 4rem;
+  }
+
+  .show-prestation {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
   }
 
   .card-prestation {
@@ -25,9 +30,8 @@
     padding: 0 !important;
     height: 500px;
     min-width: 350px;
-    border: 1px solid black;
     border-radius: 14px;
-    box-shadow: black 2px 4px 5px;
+    box-shadow: rgb(136, 136, 136) 1px 2px 20px;
 
     .card-content {
       width: 100%;
