--- a/assets/sass/theme/_showPrestation.scss
+++ b/assets/sass/theme/_showPrestation.scss
@@ -30,5 +30,9 @@
             margin-left: auto;
             margin-right: auto;
         }
+
+        .btn-rdv {
+            margin-top: 2rem;
+        }
     }
 }
