--- a/assets/sass/theme/_login.scss
+++ b/assets/sass/theme/_login.scss
@@ -3,6 +3,7 @@
     width: 50%;
     margin-left: auto;
     margin-right: auto;
+    margin: 4rem auto;
 
     label {
         padding: 1rem;
@@ -11,7 +12,6 @@
     }
     input {
         width: 350px;
-        // max-width: 350px;
         margin-left: auto;
         margin-right: auto;
         text-align: center;
